crates/strider-analyze/tests/snapshots/x86_kernel__floats__f32_compare.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ EAX", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="Equal\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="FloatToFloat\nf32 → f80", shape=box, fillcolor="#302018"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[4] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="FloatToFloat\nf32 → f80", shape=box, fillcolor="#302018"];
  "29" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[3] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="Equal\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "26" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Equal\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "22" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Less\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "25" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Equal\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "26" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "46" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="Less\nf80 → bool", shape=box, fillcolor="#1a3020"];
  "26" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
